# promptgym

./: .gitignore  CONTRIBUTING.md  README.md  hello.py  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
data/: gsm8k_responses.csv
docs/: DATASET.md
promptgym/agents/: __init__.py  base.py  first_arm.py  random_search.py  ucb_sampler.py
promptgym/dataio/: dataset.py
promptgym/envs/: prompt_opt_env.py
promptgym/evaluation/: metrics.py  runner.py
src/: env.py
src/promptgym/: __init__.py  env.py  runner.py
src/promptgym/examples/: run_random_baseline.py
src/promptgym/strategy/: __init__.py  base.py  random_baseline.py
src/strategy/: base.py  random_baseline.py
tests/: test_dataset_loads.py  test_env_loop.py  test_permutation.py  test_runner_metrics.py  test_ucb_agent.py
